--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,52 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".zalo.views.activities.RegisterActivity">
+
     <TextView
         android:id="@+id/inputNameLabelTV"
-        android:layout_marginTop="@dimen/size_medium_16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/size_medium_16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/inputNameDescTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/size_medium_16dp"
         android:layout_marginTop="@dimen/size_medium_16dp"
         android:layout_marginRight="@dimen/size_medium_16dp"
-        android:layout_marginLeft="@dimen/size_medium_16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/inputNameLabelTV"
         android:textAlignment="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/inputNameLabelTV" />
+
     <com.google.android.material.textfield.TextInputLayout
-        android:hint="@string/hint_full_name"
         android:id="@+id/nameTextInputLayout"
-        android:layout_marginTop="@dimen/size_medium_16dp"
-        app:layout_constraintTop_toBottomOf="@id/inputNameDescTV"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/size_medium_16dp"
+        android:hint="@string/hint_full_name"
+        app:layout_constraintTop_toBottomOf="@id/inputNameDescTV">
+
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/nameTextInputEditText"
-            android:paddingLeft="@dimen/size_medium_16dp"
-            android:paddingRight="@dimen/size_medium_16dp"
-            android:inputType="text"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:inputType="text"
+            android:paddingLeft="@dimen/size_medium_16dp"
+            android:paddingRight="@dimen/size_medium_16dp" />
     </com.google.android.material.textfield.TextInputLayout>
+
     <Button
         android:id="@+id/continueButton"
-        android:text="@string/label_continue"
-        android:layout_marginTop="@dimen/size_medium_16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/nameTextInputLayout"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/size_medium_16dp"
+        android:text="@string/label_continue"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/nameTextInputLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
