--- a/app/src/main/res/layout/item_user_icon.xml
+++ b/app/src/main/res/layout/item_user_icon.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_marginEnd="@dimen/size_small_8dp"
-    android:layout_marginRight="@dimen/size_small_8dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/itemUserIconRootLayout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_marginEnd="@dimen/size_small_8dp">
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/avatarImgView"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintDimensionRatio="1:1"
         android:layout_width="@dimen/size_user_icon_avatar_40dp"
-        android:layout_height="0dp" />
+        android:layout_height="0dp"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <de.hdodenhof.circleimageview.CircleImageView
-        android:background="@drawable/close_round"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_width="@dimen/size_medium_16dp"
-        android:layout_height="@dimen/size_medium_16dp" />
+        android:layout_height="@dimen/size_medium_16dp"
+        android:background="@drawable/close_round"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
