--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:focusable="true"
@@ -10,109 +11,113 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/msgEditText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/hint_message"
-        android:imeOptions="actionSend"
-        android:inputType="text"
-        app:layout_constraintBottom_toBottomOf="@id/emojiImgView"
-        app:layout_constraintLeft_toRightOf="@id/emojiImgView"
-        app:layout_constraintRight_toLeftOf="@id/uploadFileImgButton"
-        app:layout_constraintTop_toTopOf="@id/emojiImgView" />
-
-    <ImageView
-        android:id="@+id/emojiImgView"
-        android:layout_width="@dimen/size_huge_48dp"
-        android:layout_height="0dp"
-        android:contentDescription="@string/description_emoji_icon"
-        android:padding="@dimen/size_small_8dp"
-        android:src="@drawable/emoji"
-        app:layout_constraintBottom_toTopOf="@id/frameLayout"
-        app:layout_constraintDimensionRatio="h,1:1"
-        app:layout_constraintLeft_toLeftOf="parent" />
-
-    <ImageView
-        android:id="@+id/pictureImgButton"
-        android:layout_width="36dp"
-        android:layout_height="0dp"
-        android:contentDescription="@string/description_attach_picture_icon"
-        android:paddingLeft="6dp"
-        android:paddingTop="12dp"
-        android:paddingRight="6dp"
-        android:paddingBottom="12dp"
-        android:src="@drawable/photo"
-        app:layout_constraintBottom_toBottomOf="@id/emojiImgView"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@id/emojiImgView" />
-
-    <ImageView
-        android:id="@+id/sendMsgImgView"
-        android:layout_width="36dp"
-        android:layout_height="0dp"
-        android:contentDescription="@string/description_send_icon"
-        android:paddingLeft="6dp"
-        android:paddingTop="12dp"
-        android:paddingRight="6dp"
-        android:paddingBottom="12dp"
-        android:src="@drawable/send"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/emojiImgView"
-        app:layout_constraintLeft_toLeftOf="@id/pictureImgButton"
-        app:layout_constraintRight_toRightOf="@id/pictureImgButton"
-        app:layout_constraintTop_toTopOf="@id/emojiImgView" />
-
-    <ImageView
-        android:id="@+id/voiceImgButton"
-        android:layout_width="36dp"
-        android:layout_height="0dp"
-        android:contentDescription="@string/description_attach_voice_icon"
-        android:paddingLeft="6dp"
-        android:paddingTop="12dp"
-        android:paddingRight="6dp"
-        android:paddingBottom="12dp"
-        android:src="@drawable/mic"
-        app:layout_constraintBottom_toBottomOf="@id/emojiImgView"
-        app:layout_constraintRight_toLeftOf="@id/pictureImgButton"
-        app:layout_constraintTop_toTopOf="@id/emojiImgView" />
-
-    <ImageView
-        android:id="@+id/uploadFileImgButton"
-        android:layout_width="36dp"
-        android:layout_height="0dp"
-        android:contentDescription="@string/description_attach_file_icon"
-        android:paddingLeft="6dp"
-        android:paddingTop="12dp"
-        android:paddingRight="6dp"
-        android:paddingBottom="12dp"
-        android:src="@drawable/attach_file"
-        app:layout_constraintBottom_toBottomOf="@id/emojiImgView"
-        app:layout_constraintRight_toLeftOf="@id/voiceImgButton"
-        app:layout_constraintTop_toTopOf="@id/emojiImgView" />
+        android:theme="?attr/actionBarTheme"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        app:stackFromEnd="true"
+        android:layout_weight="1"
+        app:reverseLayout="true"
         android:id="@+id/recyclerView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/emojiImgView"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar" />
+        android:layout_width="match_parent"
+        android:layout_height="0dp"/>
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <EditText
+                android:background="@null"
+                android:id="@+id/msgEditText"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:hint="@string/hint_message"
+                android:imeOptions="actionSend"
+                android:inputType="text"
+                app:layout_constraintBottom_toBottomOf="@id/emojiImgView"
+                app:layout_constraintLeft_toRightOf="@id/emojiImgView"
+                app:layout_constraintRight_toLeftOf="@id/uploadFileImgButton"
+                app:layout_constraintTop_toTopOf="@id/emojiImgView" />
+
+            <ImageView
+                android:id="@+id/emojiImgView"
+                android:layout_width="@dimen/size_huge_48dp"
+                android:layout_height="0dp"
+                android:contentDescription="@string/description_emoji_icon"
+                android:padding="@dimen/size_small_8dp"
+                android:src="@drawable/emoji"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintDimensionRatio="h,1:1"
+                app:layout_constraintLeft_toLeftOf="parent" />
+
+            <ImageView
+                android:id="@+id/pictureImgButton"
+                android:layout_width="36dp"
+                android:layout_height="0dp"
+                android:contentDescription="@string/description_attach_picture_icon"
+                android:paddingLeft="6dp"
+                android:paddingTop="12dp"
+                android:paddingRight="6dp"
+                android:paddingBottom="12dp"
+                android:src="@drawable/photo"
+                app:layout_constraintBottom_toBottomOf="@id/emojiImgView"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="@id/emojiImgView" />
+
+            <ImageView
+                android:id="@+id/sendMsgImgView"
+                android:layout_width="36dp"
+                android:layout_height="0dp"
+                android:contentDescription="@string/description_send_icon"
+                android:paddingLeft="6dp"
+                android:paddingTop="12dp"
+                android:paddingRight="6dp"
+                android:paddingBottom="12dp"
+                android:src="@drawable/send"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@id/emojiImgView"
+                app:layout_constraintLeft_toLeftOf="@id/pictureImgButton"
+                app:layout_constraintRight_toRightOf="@id/pictureImgButton"
+                app:layout_constraintTop_toTopOf="@id/emojiImgView" />
+
+            <ImageView
+                android:id="@+id/voiceImgButton"
+                android:layout_width="36dp"
+                android:layout_height="0dp"
+                android:contentDescription="@string/description_attach_voice_icon"
+                android:paddingLeft="6dp"
+                android:paddingTop="12dp"
+                android:paddingRight="6dp"
+                android:paddingBottom="12dp"
+                android:src="@drawable/mic"
+                app:layout_constraintBottom_toBottomOf="@id/emojiImgView"
+                app:layout_constraintRight_toLeftOf="@id/pictureImgButton"
+                app:layout_constraintTop_toTopOf="@id/emojiImgView" />
+
+            <ImageView
+                android:id="@+id/uploadFileImgButton"
+                android:layout_width="36dp"
+                android:layout_height="0dp"
+                android:contentDescription="@string/description_attach_file_icon"
+                android:paddingLeft="6dp"
+                android:paddingTop="12dp"
+                android:paddingRight="6dp"
+                android:paddingBottom="12dp"
+                android:src="@drawable/attach_file"
+                app:layout_constraintBottom_toBottomOf="@id/emojiImgView"
+                app:layout_constraintRight_toLeftOf="@id/voiceImgButton"
+                app:layout_constraintTop_toTopOf="@id/emojiImgView" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
     <FrameLayout
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:visibility="gone"/>
+</LinearLayout>
