add typing function in chat

--- a/app/src/main/res/layout/item_official_account.xml
+++ b/app/src/main/res/layout/item_official_account.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/itemRoomRootLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,6 +12,7 @@
     android:paddingBottom="@dimen/size_small_8dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
+        tools:src="@drawable/app_icon"
         android:id="@+id/avatarImgView"
         android:layout_width="@dimen/size_room_item_avatar_48dp"
         android:layout_height="0dp"
@@ -29,13 +31,15 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/size_medium_16dp"
         android:layout_marginRight="@dimen/size_medium_16dp"
-        android:text="@string/placeholder_text"
+        tools:text="Shopee Vietnam"
         app:layout_constraintBottom_toBottomOf="@id/avatarImgView"
         app:layout_constraintLeft_toRightOf="@id/avatarImgView"
         app:layout_constraintRight_toLeftOf="@id/iconTextView"
         app:layout_constraintTop_toTopOf="@id/avatarImgView" />
 
     <ImageView
+        tools:visibility="visible"
+        tools:src="@drawable/sale_9k"
         android:id="@+id/iconTextView"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
@@ -45,7 +49,6 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@id/avatarImgView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/avatarImgView"
-        app:srcCompat="@android:drawable/ic_notification_overlay" />
+        app:layout_constraintTop_toTopOf="@id/avatarImgView"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
