--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,10 +7,11 @@
     <dimen name="size_large_24dp">24dp</dimen>
     <dimen name="size_large_32dp">32dp</dimen>
     <dimen name="size_huge_48dp">48dp</dimen>
-    <dimen name="size_enormous_56dp">56dp</dimen>
+    <dimen name="size_margin_recv_msg_item">56dp</dimen>
+    <dimen name="size_margin_send_msg_item">8dp</dimen>
     <dimen name="size_icon_space_5dp">5dp</dimen>
     <dimen name="size_small_text_10sp">10sp</dimen>
-    <dimen name="size_user_icon_avatar_40dp">40dp</dimen>
+    <dimen name="size_chat_avatar">35dp</dimen>
     <dimen name="size_room_item_avatar_48dp">48dp</dimen>
     <dimen name="size_large_avatar_64dp">64dp</dimen>
     <dimen name="size_sticker_150dp">128dp</dimen>
